--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <a class="nav-link active" aria-current="page" href="index.html">Main Page</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="cross_country.html">Cross Country</a>
+                        <a class="nav-link" href="cross_country_page.html">Cross Country</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="outdoor_track_and_field.html">Indoor Track & Field</a>
