--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">
-                <img src="images/psharrisburg.png" alt="Logo" width="120" height="60" class="d-inline-block align-text-top">
-                HPIC
+                <img src="images/psharrisburg.png" alt="Logo" width="180" height="90" class="d-inline-block align-text-top">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -40,7 +39,8 @@
     <!-- Main Content -->
     <div class="container mt-4">
         <h1>Welcome to Penn State Harrisburg CC & TF programs page</h1>
-        <p>This is the main page. PLease select a season from the navigation bar to view detailed statistics.</p>
+        <p>This is the main page. Select a season from the navigation bar to view detailed and interactive program overviews.</p>
+        <img src="images/Hart.jpg" alt="Head Coach Hart with athlete warming up" width="100%" height="600">
     </div>
 
     <!-- Bootstrap JS -->
