--- a/cross_country_page.html
+++ b/cross_country_page.html
@@ -12,8 +12,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">
-                <img src="images/logo.png" alt="Logo" width="30" height="30" class="d-inline-block align-text-top">
-                HPIC
+                <img src="images/psharrisburg.png" alt="Logo" width="180" height="90" class="d-inline-block align-text-top">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -40,7 +39,7 @@
     <!-- Main Content -->
     <div class="container mt-4">
         <h1>Cross Country</h1>
-        <p>View the embedded graph below:</p>
+        <p>View the overview of the season program below:</p>
 
         <!-- Embedded Plotly Graph -->
         <div class="embed-responsive embed-responsive-16by9">
