--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="container mt-4">
         <h1>Welcome to Penn State Harrisburg CC & TF programs page</h1>
         <p>This is the main page. Select a season from the navigation bar to view detailed and interactive program overviews.</p>
-        <img src="images/Hart.jpg" alt="Head Coach Hart with athlete warming up" width="100%" height="600">
+        <img src="images/Hart.jpg" alt="Head Coach Hart with athlete warming up">
     </div>
 
     <!-- Bootstrap JS -->
