--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 
     <!-- Main Content -->
     <div class="container mt-4">
-        <h1>Welcome to Penn State Harrisburg CC & TF programs page</h1>
-        <p>This is the main page. Select a season from the navigation bar to view detailed and interactive program overviews.</p>
+        <h2>Welcome to Penn State Harrisburg CC & TF programs page</h2>
+        <p>Select a season from the navigation bar to view detailed and interactive program overviews.</p>
         <div class="d-flex justify-content-center">
             <img src="images/Hart.jpg" alt="Head Coach Hart with athlete warming up"class="img-fluid">
         </div>
